pre-class commit with python exploration code.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 transArchive_*.csv
-
+wedge-investigation/clean_transArchive_201307_201309.csv
+sql-and-python/*.db
+python-file-exploration/data_build.r
+python-file-exploration/list_of_tasks.jpg
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
