--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ apis/Twitter/*_followers.txt
 cong_cand_anova_chi.r
 apis/Wikipedia/wikipedia_famous.txt
 web-scraping/craigslist/20191007_car_scrape.txt
+pca/owner_level_top_prod_sales.txt
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
